Implement bottom-actions + Removed fixedWidth.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -20,7 +20,7 @@
     <p id="accesskeys" class="hiddenStructure" />
     <div id="portal-top" />
     <div id="container">
-      <div id="page-wrapper" class="fixedWidth clearfix">
+      <div id="page-wrapper" class="clearfix">
 
         <div id="header" class="clearfix">
           <ul class="mobileButtons">
@@ -327,7 +327,7 @@
         </div>
 
       </div>
-      <div id="bottom-actions" class="fixedWidth">
+      <div id="bottom-actions">
         <ul id="portal-siteactions" />
       </div>
 
