refactor heading part.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -35,11 +35,8 @@
             </li>
           </ul>
 
-          <div class="row logoRow">
-            <div class="cell position-0 width-8">
-              <a id="portal-logo" href="#"><img src="images/logo_onegov.png" alt="" /></a>
-            </div>
-            <div class="cell position-8 width-8">
+          <div class="row topRow">
+            <div class="cell position-0 width-16">
               <div id="portal-languageselector-wrapper">
                 <dl id="portal-languageselector" class="actionMenu deactivated">
                   <dt class="actionMenuHeader">
@@ -66,7 +63,13 @@
             </div>
           </div>
 
-          <div class="row">
+          <div class="row logoRow">
+            <div class="cell position-0 width-16">
+              <a id="portal-logo" href="#"><img src="images/logo_onegov.png" alt="" /></a>
+            </div>
+          </div>
+
+          <div class="row globalnavRow">
             <div class="cell position-0 width-16">
 
               <div id="portal-searchbox">
