Add and move langueage selector into portal-top slot.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -18,7 +18,25 @@
   </head>
   <body>
     <p id="accesskeys" class="hiddenStructure" />
-    <div id="portal-top" />
+    <div id="portal-top">
+      <div id="portal-languageselector-wrapper">
+        <dl id="portal-languageselector" class="actionMenu deactivated">
+          <dt class="actionMenuHeader">
+            <a href="#">Deutsch <span style="font-size:10px;"> ▼</span></a>
+          </dt>
+          <dd class="actionMenuContent">
+            <ul>
+              <li class="language-en">
+                <a href="#">English</a>
+              </li>
+              <li class="language-fr">
+                <a href="#">Français</a>
+              </li>
+            </ul>
+          </dd>
+        </dl>
+      </div>
+    </div>
     <div id="container">
       <div id="page-wrapper" class="clearfix">
 
@@ -37,23 +55,6 @@
 
           <div class="row topRow">
             <div class="cell position-0 width-16">
-              <div id="portal-languageselector-wrapper">
-                <dl id="portal-languageselector" class="actionMenu deactivated">
-                  <dt class="actionMenuHeader">
-                    <a href="#">Deutsch <span style="font-size:10px;"> ▼</span></a>
-                  </dt>
-                  <dd class="actionMenuContent">
-                    <ul>
-                      <li class="language-en">
-                        <a href="#">English</a>
-                      </li>
-                      <li class="language-fr">
-                        <a href="#">Français</a>
-                      </li>
-                    </ul>
-                  </dd>
-                </dl>
-              </div>
               <div id="portal-personaltools-wrapper">
                 <dl class="actionMenu deactivated" id="portal-personaltools"><dt id="anon-personalbar">
                   <a href="#" id="personaltools-a">Kontakt</a>
