Implement global nav without table-cell hack.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -72,21 +72,23 @@
 
           <div class="row globalnavRow">
             <div class="cell position-0 width-16">
+               <div id="portal-globalnav-wrapper">
+                <ul id="portal-globalnav">
+                  <li class="">
+                    <span class="wrapper"><a title="" href="#">Private</a></span>
+                  </li>
+                  <li class="">
+                    <span class="wrapper"><a title="" href="#">Unternehmen</a></span>
+                  </li>
+                  <li class="plain">
+                    <span class="wrapper"><a title="" href="#">Portrait</a></span>
+                  </li>
+                  <li class="selected">
+                    <span class="wrapper"><a title="" href="#">Beh&ouml;rden</a></span>
+                  </li>
+                </ul>
+              </div>
 
-              <ul id="portal-globalnav">
-                <li class="">
-                  <span class="wrapper"><a title="" href="#">Private</a></span>
-                </li>
-                <li class="">
-                  <span class="wrapper"><a title="" href="#">Unternehmen</a></span>
-                </li>
-                <li class="plain">
-                  <span class="wrapper"><a title="" href="#">Portrait</a></span>
-                </li>
-                <li class="selected">
-                  <span class="wrapper"><a title="" href="#">Beh&ouml;rden</a></span>
-                </li>
-              </ul>
               <div class="portal-searchbox-wrapper">
                 <div id="portal-searchbox">
                   <form action="#search" id="livesearch0" name="searchform">
