Add a additional wrapper to the globalNav element, which wrapps the nav and the searchbox.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -72,6 +72,7 @@
 
           <div class="row globalnavRow">
             <div class="cell position-0 width-16">
+              <div class="global-nav-search-wrapper">
                <div id="portal-globalnav-wrapper">
                 <ul id="portal-globalnav">
                   <li class="">
@@ -99,8 +100,8 @@
                   </form>
                 </div>
               </div>
+             </div>
             </div>
-
           </div>
           <!-- closes #header -->
         </div>
