Move personaltool bar into portal top row.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -19,6 +19,25 @@
   <body>
     <p id="accesskeys" class="hiddenStructure" />
     <div id="portal-top">
+
+      <div id="portal-personaltools-wrapper">
+        <dl class="actionMenu deactivated" id="portal-personaltools"><dt id="anon-personalbar">
+          <a href="#" id="personaltools-a">Kontakt</a>
+          <a href="#" id="personaltools-b">Login</a>
+        </dt></dl>
+      </div>
+
+      <div id="service-navigation">
+          <ul>
+              <li>
+                  <a href="./contact" class="fa-icon fa-envelope" title="Kontakt">Kontakt</a>
+              </li>
+              <li>
+                  <a href="http://maps.google.ch" class="fa-icon fa-map-marker" title="Karten" target="_blank">Karten</a>
+              </li>
+          </ul>
+      </div>
+
       <div id="portal-languageselector-wrapper">
         <dl id="portal-languageselector" class="actionMenu deactivated">
           <dt class="actionMenuHeader">
@@ -52,17 +71,6 @@
               <a href="#" id="toggle_subsitelangs" title="">de</a>
             </li>
           </ul>
-
-          <div class="row topRow">
-            <div class="cell position-0 width-16">
-              <div id="portal-personaltools-wrapper">
-                <dl class="actionMenu deactivated" id="portal-personaltools"><dt id="anon-personalbar">
-                  <a href="#" id="personaltools-a">Kontakt</a>
-                  <a href="#" id="personaltools-b">Login</a>
-                </dt></dl>
-              </div>
-            </div>
-          </div>
 
           <div class="row logoRow">
             <div class="cell position-0 width-16">
