Implement width(x) and cell mixin - also remove cell/position and width classes from DOM.
Currently this affects only the navigation, content and sidebar column.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -73,7 +73,7 @@
           </ul>
 
           <div class="row logoRow">
-            <div class="cell position-0 width-16">
+            <div class="cell">
               <a id="portal-logo" href="#"><img src="images/logo_onegov.png" alt="" /></a>
             </div>
           </div>
@@ -138,7 +138,7 @@
 
           <div class="row">
 
-            <div class="cell position-0 width-4" id="column-navigation">
+            <div id="column-navigation">
               <div>
                 <dl class="portlet portletContextNavigation">
                   <dt class="portletHeader hiddenStructure">
@@ -167,7 +167,7 @@
             </div>
 
 
-            <div class="cell position-4 width-8" id="column-content">
+            <div id="column-content">
               <h1 class="documentFirstHeading">This is a heading 1</h1>
               <p>Some content in a paragraph</p>
               <h2>This is a heading 2</h2>
@@ -218,7 +218,7 @@
               <!-- closes column-content -->
             </div>
 
-            <div class="cell position-12 width-4" id="column-sidebar">
+            <div id="column-sidebar">
               <dl class="portlet portletStaticText portlet-static-aktuell">
                 <dt class="portletHeader">
                   <span>Aktuell</span>
