Navigation has not the correct semantic menaing.
Use nav tag instead of div for better semantic meaning.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -81,7 +81,7 @@
           <div class="row globalnavRow">
             <div class="cell position-0 width-16">
               <div class="global-nav-search-wrapper">
-               <div id="portal-globalnav-wrapper">
+               <nav id="portal-globalnav-wrapper">
                 <ul id="portal-globalnav">
                   <li class="">
                     <span class="wrapper"><a title="" href="#">Private</a></span>
@@ -96,7 +96,7 @@
                     <span class="wrapper"><a title="" href="#">Beh&ouml;rden</a></span>
                   </li>
                 </ul>
-              </div>
+              </nav>
 
               <div class="portal-searchbox-wrapper">
                 <div id="portal-searchbox">
