move editbar to above content.
By moving the editbar above the content we have a lot more space when we
have multiple columns (left / right columns).

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -113,6 +113,7 @@
         </div>
 
         <div id="columns" class="clearfix">
+          <div id="edit-bar"></div>
 
           <div class="row">
             <div class="cell position-0 width-16" id="breadcrumbs-wrapper">
