Implement accesskeys as list.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="static/static.css" />
   </head>
   <body>
-    <p id="accesskeys" class="hiddenStructure" />
+    <ul id="accesskeys" class="hiddenStructure" />
     <div id="portal-top">
       <ul class="mobileButtons">
         <li>
