Add more hidden title elements (not translated).

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -137,6 +137,7 @@
 
           <div class="row">
 
+            <h1 class="hiddenStructure">Inhalts Navigation</h1>
             <div id="column-navigation">
               <div>
                 <dl class="portlet portletContextNavigation">
@@ -217,6 +218,7 @@
               <!-- closes column-content -->
             </div>
 
+            <h1 class="hiddenStructure">Weitere Informationen</h1>
             <div id="column-sidebar">
               <dl class="portlet portletStaticText portlet-static-aktuell">
                 <dt class="portletHeader">
@@ -232,7 +234,7 @@
 
         </div>
 
-
+        <h1 class="hiddenStructure">Fusszeile</h1>
         <div id="footer" class="clearfix">
           <div class="row">
             <div class="cell position-0 width-4">
