Portal nav not fixed in the middle of the page.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -77,32 +77,34 @@
 
           <div class="row globalnavRow">
             <div class="cell position-0 width-16">
-              <div class="global-nav-search-wrapper">
-               <nav id="portal-globalnav-wrapper">
-                <ul id="portal-globalnav">
-                  <li class="">
-                    <span class="wrapper"><a title="" href="#">Private</a></span>
-                  </li>
-                  <li class="">
-                    <span class="wrapper"><a title="" href="#">Unternehmen</a></span>
-                  </li>
-                  <li class="plain">
-                    <span class="wrapper"><a title="" href="#">Portrait</a></span>
-                  </li>
-                  <li class="selected">
-                    <span class="wrapper"><a title="" href="#">Beh&ouml;rden</a></span>
-                  </li>
-                </ul>
-              </nav>
+              <div class="fixed-header">
+                <div class="global-nav-search-wrapper">
+                 <nav id="portal-globalnav-wrapper">
+                  <ul id="portal-globalnav">
+                    <li class="">
+                      <span class="wrapper"><a title="" href="#">Private</a></span>
+                    </li>
+                    <li class="">
+                      <span class="wrapper"><a title="" href="#">Unternehmen</a></span>
+                    </li>
+                    <li class="plain">
+                      <span class="wrapper"><a title="" href="#">Portrait</a></span>
+                    </li>
+                    <li class="selected">
+                      <span class="wrapper"><a title="" href="#">Beh&ouml;rden</a></span>
+                    </li>
+                  </ul>
+                </nav>
 
-              <div class="portal-searchbox-wrapper">
-                <div id="portal-searchbox">
-                  <form action="#search" id="livesearch0" name="searchform">
-                    <div class="LSBox">
-                      <input type="text" id="searchGadget" class="searchField inputLabel"  placeholder="OneGovBox durchsuchen" />
-                    <input type="submit" value="Suche" class="searchButton" />
-                    </div>
-                  </form>
+                <div class="portal-searchbox-wrapper">
+                  <div id="portal-searchbox">
+                    <form action="#search" id="livesearch0" name="searchform">
+                      <div class="LSBox">
+                        <input type="text" id="searchGadget" class="searchField inputLabel"  placeholder="OneGovBox durchsuchen" />
+                      <input type="submit" value="Suche" class="searchButton" />
+                      </div>
+                    </form>
+                  </div>
                 </div>
               </div>
              </div>
