Portal top section is not able to carry multiple floated elements.
Becuase the backgroundcolor is attached to the portal-top section the
width can not be restricted. So wrap the portal top section with a container.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -17,52 +17,54 @@
   </head>
   <body>
     <ul id="accesskeys" class="hiddenStructure" />
-    <div id="portal-top">
-      <ul class="mobileButtons">
-        <li>
-          <a href="#" id="toggle_search" title=""></a>
-        </li>
-        <li>
-          <a href="#" id="toggle_slidenavi" title=""></a>
-        </li>
-        <li>
-          <a href="#" id="toggle_subsitelangs" title="">de</a>
-        </li>
-      </ul>
-      <div id="portal-personaltools-wrapper">
-        <dl class="actionMenu deactivated" id="portal-personaltools"><dt id="anon-personalbar">
-          <a href="#" id="personaltools-a">Kontakt</a>
-          <a href="#" id="personaltools-b">Login</a>
-        </dt></dl>
-      </div>
+    <div class="masthead">
+      <div id="portal-top">
+        <ul class="mobileButtons">
+          <li>
+            <a href="#" id="toggle_search" title=""></a>
+          </li>
+          <li>
+            <a href="#" id="toggle_slidenavi" title=""></a>
+          </li>
+          <li>
+            <a href="#" id="toggle_subsitelangs" title="">de</a>
+          </li>
+        </ul>
+        <div id="portal-personaltools-wrapper">
+          <dl class="actionMenu deactivated" id="portal-personaltools"><dt id="anon-personalbar">
+            <a href="#" id="personaltools-a">Kontakt</a>
+            <a href="#" id="personaltools-b">Login</a>
+          </dt></dl>
+        </div>
 
-      <div id="service-navigation">
-          <ul>
-              <li>
-                  <a href="./contact" class="fa-icon fa-envelope" title="Kontakt">Kontakt</a>
-              </li>
-              <li>
-                  <a href="http://maps.google.ch" class="fa-icon fa-map-marker" title="Karten" target="_blank">Karten</a>
-              </li>
-          </ul>
-      </div>
-
-      <div id="portal-languageselector-wrapper">
-        <dl id="portal-languageselector" class="actionMenu deactivated">
-          <dt class="actionMenuHeader">
-            <a href="#">Deutsch <span style="font-size:10px;"> ▼</span></a>
-          </dt>
-          <dd class="actionMenuContent">
+        <div id="service-navigation">
             <ul>
-              <li class="language-en">
-                <a href="#">English</a>
-              </li>
-              <li class="language-fr">
-                <a href="#">Français</a>
-              </li>
+                <li>
+                    <a href="./contact" class="fa-icon fa-envelope" title="Kontakt">Kontakt</a>
+                </li>
+                <li>
+                    <a href="http://maps.google.ch" class="fa-icon fa-map-marker" title="Karten" target="_blank">Karten</a>
+                </li>
             </ul>
-          </dd>
-        </dl>
+        </div>
+
+        <div id="portal-languageselector-wrapper">
+          <dl id="portal-languageselector" class="actionMenu deactivated">
+            <dt class="actionMenuHeader">
+              <a href="#">Deutsch <span style="font-size:10px;"> ▼</span></a>
+            </dt>
+            <dd class="actionMenuContent">
+              <ul>
+                <li class="language-en">
+                  <a href="#">English</a>
+                </li>
+                <li class="language-fr">
+                  <a href="#">Français</a>
+                </li>
+              </ul>
+            </dd>
+          </dl>
+        </div>
       </div>
     </div>
     <div id="container">
