--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -71,14 +71,14 @@
       <div id="page-wrapper" class="clearfix">
 
         <div id="header" class="clearfix">
-          <div class="row logoRow">
-            <div class="cell">
+          <div class="logoRow">
+            <div>
               <a id="portal-logo" href="#"><img src="images/logo_onegov.png" alt="" /></a>
             </div>
           </div>
 
-          <div class="row globalnavRow">
-            <div class="cell position-0 width-16 navigation">
+          <div class="globalnavRow">
+            <div class="navigation">
               <div class="fixed-header">
                 <div class="global-nav-search-wrapper">
                  <nav id="portal-globalnav-wrapper">
@@ -119,7 +119,7 @@
           <div id="edit-bar"></div>
 
           <div class="row">
-            <div class="cell position-0 width-16" id="breadcrumbs-wrapper">
+            <div id="breadcrumbs-wrapper">
               <div id="portal-breadcrumbs">
                 <span id="breadcrumbs-you-are-here">Sie sind hier:</span>
                 <span id="breadcrumbs-home">
@@ -236,8 +236,8 @@
         </div>
 
         <div id="footer" class="clearfix">
-          <div class="row">
-            <div class="cell position-0 width-4">
+          <div>
+            <div>
               <dl class="portlet">
                 <dt class="portletHeader">
                   <span class="portletTopLeft"></span>
@@ -260,7 +260,7 @@
               </dl>
             </div>
 
-            <div class="cell position-4 width-4">
+            <div>
               <dl class="portlet">
                 <dt class="portletHeader">
                   <span class="portletTopLeft"></span>
@@ -283,7 +283,7 @@
               </dl>
             </div>
 
-            <div class="cell position-8 width-4">
+            <div>
               <dl class="portlet">
                 <dt class="portletHeader">
                   <span class="portletTopLeft"></span>
@@ -306,7 +306,7 @@
               </dl>
             </div>
 
-            <div class="cell position-12 width-4">
+            <div>
               <dl class="portlet">
                 <dt class="portletHeader">
                   <span class="portletTopLeft"></span>
