Add a hidden h2 to the logo markup.
Without this separation the logo belongs semantically to the service navigation.

Conflicts:
	docs/HISTORY.txt
	plonetheme/onegovbear/theme/index.html

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -69,8 +69,9 @@
       <div id="page-wrapper" class="clearfix">
 
         <div id="header" class="clearfix">
-          <div class="row logoRow">
-            <div class="cell">
+          <div class="logoRow">
+            <div>
+              <h2 class="hiddenStructure">Logo</h2>
               <a id="portal-logo" href="#"><img src="images/logo_onegov.png" alt="" /></a>
             </div>
           </div>
