Add a hidden h2 to the logo markup.
Without this separation the logo belongs semantically to the service navigation.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -73,6 +73,7 @@
         <div id="header" class="clearfix">
           <div class="logoRow">
             <div>
+              <h2 class="hiddenStructure">Logo</h2>
               <a id="portal-logo" href="#"><img src="images/logo_onegov.png" alt="" /></a>
             </div>
           </div>
