Implement zoom buttons.
Place zoom buttons in the portal top section according to this change request:
https://extranet.4teamwork.ch/kunden/0141-stadt-bern/0141.01-id/0141-01-projekt-relaunch-internet-www-bern.ch/Relaunch%20Internet%20Stadt%20Bern_Change%20Request%20Nr.1.pdf/view

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -63,6 +63,13 @@
           </dd>
         </dl>
       </div>
+
+      <ul class="zoom-buttons">
+        <li><a href="#" class="zoom-button" data-zoom-level="1" id="zoom-small"></a></li>
+        <li><a href="#" class="zoom-button" data-zoom-level="1.1" id="zoom-medium"></a></li>
+        <li><a href="#" class="zoom-button" data-zoom-level="1.3" id="zoom-large"></a></li>
+      </ul>
+
     </div>
     <div id="container">
       <div id="page-wrapper" class="clearfix">
