Add support for googles sitelinks searchbox.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -112,6 +112,7 @@
                       </div>
                     </form>
                   </div>
+                  <div id="portal-sitesearch"></div>
                 </div>
               </div>
              </div>
