--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -67,9 +67,9 @@
       </div>
 
       <ul class="zoom-buttons">
-        <li><a href="#" class="zoom-button" data-zoom-level="1" id="zoom-small"></a></li>
-        <li><a href="#" class="zoom-button" data-zoom-level="1.1" id="zoom-medium"></a></li>
-        <li><a href="#" class="zoom-button" data-zoom-level="1.3" id="zoom-large"></a></li>
+        <li><a href="#" class="zoom-button" data-zoom-level="1" id="zoom-small">Normale Schriftgr&ouml;sse</a></li>
+        <li><a href="#" class="zoom-button" data-zoom-level="1.1" id="zoom-medium">Mittlere Schriftgr&ouml;sse</a></li>
+        <li><a href="#" class="zoom-button" data-zoom-level="1.3" id="zoom-large">Grosse Schriftgr&ouml;sse</a></li>
       </ul>
 
     </div>
