Implement skrollr to have sticky background at a certain point.
The first 40 pixels of the backgroundimage are covered by the portal-top
container. So use the skrollr to have the sticky background at this certain point.

--- a/plonetheme/onegovbear/theme/index.html
+++ b/plonetheme/onegovbear/theme/index.html
@@ -14,55 +14,57 @@
 
     <link rel="stylesheet" type="text/css" href="static/static.css" />
   </head>
-  <body>
+  <body data-0="background-position-y: 39px;" data-39="background-position-y:0;">
     <ul id="accesskeys" class="hiddenStructure" />
-    <div id="portal-top">
-      <div id="mobile-logo" />
+    <div id="portal-top-wrapper">
+      <div id="portal-top">
+        <div id="mobile-logo" />
 
-      <div id="ftw-mobile-wrapper" />
+        <div id="ftw-mobile-wrapper" />
 
-      <div id="portal-personaltools-wrapper">
-        <dl class="actionMenu deactivated" id="portal-personaltools"><dt id="anon-personalbar">
-          <a href="#" id="personaltools-a">Kontakt</a>
-          <a href="#" id="personaltools-b">Login</a>
-        </dt></dl>
-      </div>
+        <div id="portal-personaltools-wrapper">
+          <dl class="actionMenu deactivated" id="portal-personaltools"><dt id="anon-personalbar">
+            <a href="#" id="personaltools-a">Kontakt</a>
+            <a href="#" id="personaltools-b">Login</a>
+          </dt></dl>
+        </div>
 
-      <div id="service-navigation">
-          <ul>
-              <li>
-                  <a href="./contact" class="fa-icon fa-envelope" title="Kontakt">Kontakt</a>
-              </li>
-              <li>
-                  <a href="http://maps.google.ch" class="fa-icon fa-map-marker" title="Karten" target="_blank">Karten</a>
-              </li>
-          </ul>
-      </div>
-
-      <div id="portal-languageselector-wrapper">
-        <dl id="portal-languageselector" class="actionMenu deactivated">
-          <dt class="actionMenuHeader">
-            <a href="#">Deutsch <span style="font-size:10px;"> ▼</span></a>
-          </dt>
-          <dd class="actionMenuContent">
+        <div id="service-navigation">
             <ul>
-              <li class="language-en">
-                <a href="#">English</a>
-              </li>
-              <li class="language-fr">
-                <a href="#">Français</a>
-              </li>
+                <li>
+                    <a href="./contact" class="fa-icon fa-envelope" title="Kontakt">Kontakt</a>
+                </li>
+                <li>
+                    <a href="http://maps.google.ch" class="fa-icon fa-map-marker" title="Karten" target="_blank">Karten</a>
+                </li>
             </ul>
-          </dd>
-        </dl>
+        </div>
+
+        <div id="portal-languageselector-wrapper">
+          <dl id="portal-languageselector" class="actionMenu deactivated">
+            <dt class="actionMenuHeader">
+              <a href="#">Deutsch <span style="font-size:10px;"> ▼</span></a>
+            </dt>
+            <dd class="actionMenuContent">
+              <ul>
+                <li class="language-en">
+                  <a href="#">English</a>
+                </li>
+                <li class="language-fr">
+                  <a href="#">Français</a>
+                </li>
+              </ul>
+            </dd>
+          </dl>
+        </div>
+
+        <ul class="zoom-buttons">
+          <li><a href="#" class="zoom-button" data-zoom-level="1" id="zoom-small">Normale Schriftgr&ouml;sse</a></li>
+          <li><a href="#" class="zoom-button" data-zoom-level="1.1" id="zoom-medium">Mittlere Schriftgr&ouml;sse</a></li>
+          <li><a href="#" class="zoom-button" data-zoom-level="1.3" id="zoom-large">Grosse Schriftgr&ouml;sse</a></li>
+        </ul>
+
       </div>
-
-      <ul class="zoom-buttons">
-        <li><a href="#" class="zoom-button" data-zoom-level="1" id="zoom-small">Normale Schriftgr&ouml;sse</a></li>
-        <li><a href="#" class="zoom-button" data-zoom-level="1.1" id="zoom-medium">Mittlere Schriftgr&ouml;sse</a></li>
-        <li><a href="#" class="zoom-button" data-zoom-level="1.3" id="zoom-large">Grosse Schriftgr&ouml;sse</a></li>
-      </ul>
-
     </div>
     <div id="container">
       <div id="page-wrapper" class="clearfix">
